test/errors/templates_error/zs/unresolved_reference_error.zs
package unresolved_reference_error;

struct UnresolvedReferenceError
{
    TemplatedStruct<uint32> value;
};
